Rework Scene class to fix earlier not-caught bugs with properties being set incorrectly

--- a/src/scene_sample1.yaml
+++ b/src/scene_sample1.yaml
@@ -2,7 +2,5 @@ scene:
   width: 1024
   height: 768
   max_depth: 3
-  camera_x: 0.0
-  camera_y: 0.0
-  camera_z: 1.0
+  camera: [0.0, 0.0, 1.0]
   
